@@ -19,12 +19,6 @@ class Sys::Time {
 
   native static method times : long ($buffer : Sys::Time::Tms);
   
-  static method timesp : Sys::Time::Tms () {
-    my $tms = Sys::Time::Tms->new;
-    &times($tms);
-    return $tms;
-  }
-  
   native static method clock_nanosleep : int ($clockid : int, $flags : int, $request : Sys::Time::Timespec, $remain : Sys::Time::Timespec);
   
   native static method nanosleep : int ($rqtp : Sys::Time::Timespec, $rmtp : Sys::Time::Timespec);
