@@ -17,6 +17,7 @@
     * Removed the chmodp method in the SPVM::Sys::IO class. This logic is moved to the chmod method in the Sys class.
     * Removed the chownp method in the SPVM::Sys::IO class. This logic is moved to the chown method in the Sys class.
     * Removed the utimep method in the SPVM::Sys::IO class. This logic is moved to the utime method in the Sys class.
+    * Removed the timesp method in the SPVM::Sys::IO class. This logic is moved to the times method in the Sys class.
   [New Features]
     * Added the Sys::IO::Windows class.
     * Added the symlinkp method in the Sys::IO: class.
